# pg_query.rs

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: main.yml
benches/: helpers.rs  parse.rs  parse_protobuf.rs  parse_vs_summary.rs
fuzz/: Cargo.toml  README.md
fuzz/src/: fuzz_parse.rs
src/: ast.rs  bindings.rs  bindings_raw.rs  error.rs  lib.rs  node_enum.rs  node_mut.rs  node_ref.rs  node_structs.rs  parse_result.rs  protobuf.rs  query.rs  raw_parse.rs  summary.rs  summary_result.rs  truncate.rs
src/ast/: convert.rs  mod.rs  nodes.rs
tests/: ast_tests.rs  deparse_tests.rs  filter_column_tests.rs  fingerprint_tests.rs  normalize_tests.rs  parallel_tests.rs  parse_plpgsql_tests.rs  parse_tests.rs  pg_query_tests.rs  raw_parse_tests.rs  summary_filter_column_tests.rs  summary_tests.rs  summary_truncate_tests.rs  support.rs  truncate_tests.rs
tests/data/: plpgsql_query.json  plpgsql_simple.json  simple_plpgsql.json
