[package]
name = "pg_query"
description = "PostgreSQL parser that uses the actual PostgreSQL server source to parse SQL queries and return the internal PostgreSQL parse tree."
version = "0.7.0"
edition = "2021"
documentation = "https://docs.rs/pg_query/"
build = "build.rs"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/pganalyze/pg_query.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
prost = "0.10.4"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"

[build-dependencies]
bindgen = "*"
clippy = { version = "*", optional = true }
prost-build = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
fs_extra = "*"

[dev-dependencies]
easy-parallel = "*"
pretty_assertions = "*"
regex = "*"
